--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -30,7 +30,7 @@ jobs:
       uses: actions/download-artifact@v4.1.8
       with:
         name: hello-artifact
-        path: ./artifacts/
+        path: ./artifacts
     - name: cat ./artifacts/hello.txt
       run:  cat ./artifacts/hello.txt
 
