--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Create a text file
       run: echo "Hello, world!" > hello.txt
@@ -21,17 +21,15 @@ jobs:
 
   
   download:
-    name: download
     runs-on: ubuntu-latest
     needs: build
-
     steps:
     - name: download artifact
       uses: actions/download-artifact@v4.1.8
       with:
         name: hello-artifact
         path: ./artifacts
-    - name: cat ./artifacts/hello.txt
+    - name: Display content of the text file
       run:  cat ./artifacts/hello.txt
 
     
